[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"




[project]
name = "cplearn"
version = "0.2.1"
description = "Enhancing unsupervised learning with geometry-density interactions via decomposition of data into geometric core-periphery layers and subsequent clustering"
authors = [
  { name = "Chandra Sekhar Mukherjee", email = "chandrasekhar.mukherjee07@gmail.com" },
  { name = "Joonyoung (Aaron) Bae",       email = "joonyoungbae.aaron@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
  "hnswlib~=0.8.0",
  "joblib~=1.5.2",
  "kneed~=0.8.5",
  "leidenalg~=0.10.2",
  "networkx~=3.1",
  "numba>=0.59,<0.64",
  "numpy>=1.25.2,<3.0",
  "pandas>=2.0,<3.0",
  "plotly~=6.3.1",
  "python-igraph~=0.11.9",
  "scikit-learn>=1.6,<1.8",
  "scipy>=1.15,<1.18",
  "statsmodels~=0.14.5",
  "sympy~=1.14.0",
  "tabulate~=0.9.0",
  "tqdm~=4.67.1",
  "umap-learn~=0.5.9.post2"
]


